# Updater

./: .gitignore  README.md  main.py  pyproject.toml  requirements.in  requirements.txt  updater.py
.github/: dependabot.yml
.github/workflows/: build.yml  bump_version.yml  create_release.yml
